Bug 485015 - Identify doesn't provide useful information - doesn't match preview or device list
Summary: Identify doesn't provide useful information - doesn't match preview or device...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (show other bugs)
Version: 6.0.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-04-04 08:24 UTC by dft
Modified: 2024-05-28 13:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In: 6.1
Sentry Crash Report:


Attachments
KDE 5.27 Shows as per device list, 6+ shows another value (1.48 MB, image/jpeg)
2024-04-04 08:24 UTC, dft
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dft 2024-04-04 08:24:46 UTC
Created attachment 168130 [details]
KDE 5.27 Shows as per device list, 6+ shows another value

SUMMARY
The OSD text doesn't match the preview or device list, this means no way of actually identifying which monitor is which.

STEPS TO REPRODUCE
1. Settings
2. Click Display and Monitor
3. Click Identify

OBSERVED RESULT
Shows Dell P2720DC/809849683

EXPECTED RESULT
Should show as per preview window and device list
Dell P2720DC/7NTQK53 or Dell P2720DC/6NT...

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Nobara 39
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
See attached image with red underlines for example - top half of image is KDE 5.27, bottom half is KDE 6.


KDE 5.27 Shows as per device list, 6+ shows another value
Comment 1 Brian Cohen 2024-05-21 12:38:01 UTC
I am affected by this bug and I can confirm its behavior on KDE Plasma 6.0.4 on X11.
Comment 2 Bug Janitor Service 2024-05-28 08:09:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5786
Comment 3 David Redondo 2024-05-28 13:35:34 UTC
Git commit ec1ebb6fb83f746b02897f047e42f5bb6aecb2b3 by David Redondo.
Committed on 28/05/2024 at 13:19.
Pushed by davidre into branch 'master'.

Use di_info_get_serial to fetch the serial number from EDID

This will also look at the "product serial string" in addition
to the actual serial number. The former is what we use elsewhere
in Plasma like the kscreen kcm.
FIXED-IN:6.1

M  +2    -1    src/utils/edid.cpp

https://invent.kde.org/plasma/kwin/-/commit/ec1ebb6fb83f746b02897f047e42f5bb6aecb2b3
Comment 4 David Redondo 2024-05-28 13:49:07 UTC
Git commit 20191ffaa1a1683c39e5d25ec1b752aebd75f874 by David Redondo.
Committed on 28/05/2024 at 13:36.
Pushed by davidre into branch 'Plasma/6.1'.

Use di_info_get_serial to fetch the serial number from EDID

This will also look at the "product serial string" in addition
to the actual serial number. The former is what we use elsewhere
in Plasma like the kscreen kcm.
FIXED-IN:6.1


(cherry picked from commit ec1ebb6fb83f746b02897f047e42f5bb6aecb2b3)

M  +2    -1    src/utils/edid.cpp

https://invent.kde.org/plasma/kwin/-/commit/20191ffaa1a1683c39e5d25ec1b752aebd75f874